Prevent icon stretching

--- a/app/assets/stylesheets/internal.css.scss
+++ b/app/assets/stylesheets/internal.css.scss
@@ -33,7 +33,6 @@
     }
 
     .filetype-icon {
-      width: 8%;
       padding: 0 0 0 10px;
       text-align: center;
 
